--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "example": "examples"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "eslint-config-prettier": "^7.0.0",
     "jshint": "^2.12.0"
   },
   "devDependencies": {
@@ -21,7 +23,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "test": "jest",
