--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "scripts": {
     "test": "jest",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "prettier --check . && eslint .",
+    "lint:fix": "prettier --write . && eslint . --fix"
   },
   "keywords": [],
   "author": "",
