--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.4",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.2.1"
   },
   "scripts": {
@@ -33,5 +35,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md,html}": "prettier --write"
+  }
 }
